All Error Fixed

--- a/templates/Deepak/additive-inverse-of-complex-number-details.html
+++ b/templates/Deepak/additive-inverse-of-complex-number-details.html
@@ -25,9 +25,9 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 <!-- Meta Title, Description and Canonical URL Starts -->
-<title>Sum of Integers from {{aa}} to {{bb}} | {{aa}} to {{bb}} Integers Sum -RoundingCalculator.Guru </title>
+<title>What is the Additive Inverse of the complex number {{aa}} + {{bb}}? -RoundingCalculator.Guru </title>
 <meta name="description"
-    content=" Calculate the Sum of Integers from {{aa}} to {{bb}} i.e {{ans}} easily. Check the step-by-step explanation to compute the integer sum for the {{aa}} to {{bb}} natural numbers. " />
+    content=" Know What is the Additive Inverse of the complex number {{aa}} - {{bb}}i by using an accurate solution and in the easiest way. " />
 <link rel="canonical" href="{{request.build_absolute_uri}}">
 <!-- Meta Title, Description and Canonical URL ENDS -->
 
@@ -35,9 +35,9 @@
 <!--  FACEBOOK CONFIGURATION STARTS  -->
 <meta content="https://www.facebook.com/OnlineCalculator-Guru-131572098650589/" property="og:url" />
 <meta property="og:title"
-    content="Sum of Integers Calculator | Sum of Integers Formula - RoundingCalculator.Guru " />
+    content="What is the Additive Inverse of the complex number {{aa}} + {{bb}}? - RoundingCalculator.Guru " />
 <meta property="og:description"
-    content=" Calculate the Sum of Integers from {{aa}} to {{bb}} i.e {{ans}} easily. Check the step-by-step explanation to compute the integer sum for the {{aa}} to {{bb}} natural numbers." />
+    content=" Know What is the Additive Inverse of the complex number {{aa}} - {{bb}}i by using an accurate solution and in the easiest way." />
 <meta content="" property="og:site_name" />
 <meta content="https://onlinecalculator.guru/static/images/Chemistry/ohms-law-calculator.jpeg" property="og:image" />
 <meta property="og:image:type" content="image/png" />
@@ -48,9 +48,9 @@
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="https://twitter.com/onlinecalculator" />
 <meta name="twitter:title"
-    content="Sum of Integers Calculator | Sum of Integers Formula - RoundingCalculator.Guru " />
+    content="What is the Additive Inverse of the complex number {{aa}} + {{bb}}? - RoundingCalculator.Guru " />
 <meta name="twitter:description"
-    content=" Calculate the Sum of Integers from {{aa}} to {{bb}} i.e {{ans}} easily. Check the step-by-step explanation to compute the integer sum for the {{aa}} to {{bb}} natural numbers.  " />
+    content=" Know What is the Additive Inverse of the complex number {{aa}} - {{bb}}i by using an accurate solution and in the easiest way.  " />
 <meta name="twitter:image:src"
     content="https://onlinecalculator.guru/static/images/Chemistry/ohms-law-calculator.jpeg" />
 <meta property="twitter:image:height" content="435" />
@@ -58,10 +58,10 @@
 <!-- TWITTER CARD CONFIGURATION ENDS  -->
 <!--  LINKEDIN CONFIGURATION STARTS-->
 <tittle></tittle>
-<meta property='og:title' content="Sum of Integers Calculator | Sum of Integers Formula - RoundingCalculator.Guru " />
+<meta property='og:title' content="What is the Additive Inverse of the complex number {{aa}} + {{bb}}? - RoundingCalculator.Guru " />
 <meta property='og:image' content="https://onlinecalculator.guru/static/images/Chemistry/ohms-law-calculator.jpeg" />
 <meta property='og:description'
-    content=" Calculate the Sum of Integers from {{aa}} to {{bb}} i.e {{ans}} easily. Check the step-by-step explanation to compute the integer sum for the {{aa}} to {{bb}} natural numbers.  ." />
+    content=" Know What is the Additive Inverse of the complex number {{aa}} - {{bb}}i by using an accurate solution and in the easiest way.  ." />
 <meta property='og:url' content="https://www.linkedin.com/in/onlinecalculator/" />
 <!-- end of linkedin CONFIGURATIONS ENDS -->
 <!-- OPEN GRAPH CONFIGURATION ENDS -->
@@ -223,16 +223,16 @@ display: none;
             <h1 class="h1">Additive Inverse of  Complex Number {{aa}} +{{bb}}i    ?</h1>
 
         </div>
-        <p>Use the <a href="/additive-inverse-of-complex-number-calculator/">Additive Inverse of Complex Number Calculator</a> to find the additive inverse of {{aa}} + {{bb}}i. Here you can check the detailed solution for additive inverse of {{aa}} + {{bb}}i which is -{{aa}}-{{bb}}i.
-        </p>
-
+        <p> <p>Basically, we can say that the additive inverse of any number is just the opposite of the number. 
+            The meaning of additive inverse is that the value which when added to the given number makes the sum of them equal to zero. 
+            Check the solution for What is the Additive Inverse of the complex number {{aa}} + {{bb}}i by using <a href="/additive-inverse-of-complex-number-calculator/">Additive Inverse of Complex Number Calculator</a>.</p></p>
+       
         <div class="card-body">
 
 
             <form action="" method="POST" id="my_form">
                 {% csrf_token %}
 
-                <p>Find additive inverse </p>
                     <div>
                         <p align="center"> 
                             <input name="aa" type="number" id="aa" onkeypress="return isNumberKey(event)" required
@@ -314,12 +314,9 @@ display: none;
 
             <div class="card-body">
             <!-- <h3>What is the Additive Inverse of the complex number {{aa}} + {{bb}}i?</h3> -->
-            <p>Basically, we can say that the additive inverse of any number is just the opposite of the number. 
-                The meaning of additive inverse is that the value which when added to the given number makes the sum of them equal to zero. 
-                Check the solution for What is the Additive Inverse of the complex number {{aa}} + {{bb}}i.</p>
+           
             <!-- <h3>Detailed solution for finding the additive inverse of {{aa}} + {{bb}}i</h3> -->
-            <p><strong>Example:</strong></p>
-            <p>What is the additive inverse of {{aa}} + {{bb}}i?</p>
+           
             <p><strong>Solution:</strong></p>
             <p>Given that,</p>
             <p>{{aa}} + {{bb}}i</p>
