--- a/templates/Deepak/coordinatesshapecalculatordetails.html
+++ b/templates/Deepak/coordinatesshapecalculatordetails.html
@@ -169,7 +169,7 @@
                 </form> <br>
 
 
-                <h3>Examples:</h3> <br>
+                <p>Examples of When the coordinates are joined, which shape is formed:</p> 
                 <div class="container">
                     <div class="row">
     
@@ -177,11 +177,11 @@
                             <ul>
                                
     
-                                <li>
+                                <!-- <li>
                                     <a href="/when-the-coordinates--3--3-4--3-4-2--3-2-are-joined-which-shape-is-formed/">
                                         A(-3, -3), B(4, -3), C(4, 2), and D(-3, 2) 
                                     </a>
-                                </li>
+                                </li> -->
 
                                 <li>
                                     <a href="/when-the-coordinates-0-1-1-1-1-0-0-0-are-joined-which-shape-is-formed/">
@@ -201,11 +201,11 @@
                                         A(4, 6), B(7, 7), C(10, 10), and D(7, 9)  
                                     </a>
                                 </li>
-                                <li>
+                                <!-- <li>
                                     <a href="/when-the-coordinates-3--5--5--4-7-10-15-9-are-joined-which-shape-is-formed/">
                                         A(3, -5), B(-5, -4), C(7, 10), and D(15, 9)   
                                     </a>
-                                </li>
+                                </li> -->
                                
                             </ul>
                         </div>
