--- a/templates/Deepak/detailshorizontaltangent.html
+++ b/templates/Deepak/detailshorizontaltangent.html
@@ -127,7 +127,7 @@
 
 
 
-                <h3>Examples:</h3> <br>
+                <p>Examples of points on the curve where the tangent is horizontal:</p> 
                 <div class="container">
                     <div class="row">
     
@@ -190,20 +190,10 @@
         </div>
         <div class="card-body">
             {{detailsteps|safe}}
-        </div>
-    </div>
-
-
-
-   
-
-
-
-    <div class="card">
-        <div class="card-header">
+        <hr>
             <h3>FAQs on Points on the curve y=\({{eq1}}\)</h3>
-        </div>
-        <div class="card-body">
+       
+       
             <strong>1. What makes a horizontal tangent line?</strong>
             <p>A horizontal tangent line is a mathematical feature on the graph which locates a function's derivative as zero. The horizontal lines have a slope of 0.
             </p>
@@ -216,7 +206,7 @@
     </div>
 
 
-
+</div>
 
 </div>
 
