--- a/templates/Deepak/differential-equation-calculator-details.html
+++ b/templates/Deepak/differential-equation-calculator-details.html
@@ -25,9 +25,9 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 <!-- Meta Title, Description and Canonical URL Starts -->
-<title>What is the Square Root of {{aa}} Squared? </title>
+<title>Solve the given differential equation by separation of variables. dy/dx = e({{xcof}}x+{{ycof}}y)  - RoundingCalculator.Guru</title>
 <meta name="description"
-    content="  Learn how to determine the square root of {{aa}} squared by reading our detailed steps and example. Check how √({{aa}}^2) is {{aa}}. " />
+    content="  Find the answer to Solve the given differential equation by separation of variables. dy/dx = e({{xcof}}x+{{ycof}}y) with step by step explanation. " />
 <link rel="canonical" href="{{request.build_absolute_uri}}">
 <!-- Meta Title, Description and Canonical URL ENDS -->
 
@@ -35,9 +35,9 @@
 <!--  FACEBOOK CONFIGURATION STARTS  -->
 <meta content="https://www.facebook.com/OnlineCalculator-Guru-131572098650589/" property="og:url" />
 <meta property="og:title"
-    content="Square Root of a Number Squared  Calculator | Free Calculator to find Square Root of a Number Squared " />
+    content="Solve the given differential equation by separation of variables. dy/dx = e({{xcof}}x+{{ycof}}y)  - RoundingCalculator.Guru " />
 <meta property="og:description"
-    content="  Learn how to determine the square root of {{aa}} squared by reading our detailed steps and example. Check how √({{aa}}^2) is {{aa}}." />
+    content="  Find the answer to Solve the given differential equation by separation of variables. dy/dx = e({{xcof}}x+{{ycof}}y) with step by step explanation." />
 <meta content="" property="og:site_name" />
 <meta content="https://onlinecalculator.guru/static/images/Chemistry/ohms-law-calculator.jpeg" property="og:image" />
 <meta property="og:image:type" content="image/png" />
@@ -48,9 +48,9 @@
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="https://twitter.com/onlinecalculator" />
 <meta name="twitter:title"
-    content="Square Root of a Number Squared  Calculator | Free Calculator to find Square Root of a Number Squared " />
+    content="Solve the given differential equation by separation of variables. dy/dx = e({{xcof}}x+{{ycof}}y)  - RoundingCalculator.Guru " />
 <meta name="twitter:description"
-    content="  Learn how to determine the square root of {{aa}} squared by reading our detailed steps and example. Check how √({{aa}}^2) is {{aa}}.  " />
+    content="  Find the answer to Solve the given differential equation by separation of variables. dy/dx = e({{xcof}}x+{{ycof}}y) with step by step explanation.  " />
 <meta name="twitter:image:src"
     content="https://onlinecalculator.guru/static/images/Chemistry/ohms-law-calculator.jpeg" />
 <meta property="twitter:image:height" content="435" />
@@ -58,10 +58,10 @@
 <!-- TWITTER CARD CONFIGURATION ENDS  -->
 <!--  LINKEDIN CONFIGURATION STARTS-->
 <tittle></tittle>
-<meta property='og:title' content="Square Root of a Number Squared  Calculator | Square Root of a Number Squared " />
+<meta property='og:title' content="Solve the given differential equation by separation of variables. dy/dx = e({{xcof}}x+{{ycof}}y)  - RoundingCalculator.Guru " />
 <meta property='og:image' content="https://onlinecalculator.guru/static/images/Chemistry/ohms-law-calculator.jpeg" />
 <meta property='og:description'
-    content="  Learn how to determine the square root of {{aa}} squared by reading our detailed steps and example. Check how √({{aa}}^2) is {{aa}}.  ." />
+    content="  Find the answer to Solve the given differential equation by separation of variables. dy/dx = e({{xcof}}x+{{ycof}}y) with step by step explanation.  ." />
 <meta property='og:url' content="https://www.linkedin.com/in/onlinecalculator/" />
 <!-- end of linkedin CONFIGURATIONS ENDS -->
 <!-- OPEN GRAPH CONFIGURATION ENDS -->
@@ -213,32 +213,30 @@ display: none;
 <div class="container" style="height: auto !important;">
     <div class="card c1">
         <div class="card-header">
-            <h1 class="h1">General Solution of the differential equation  {{aa}}</h1>
+            <h1 class="h1">Solve the given differential equation by separation of variables <span class="frac"><span>dy</span><span class="symbol">/</span><span class="bottom">dx</span></span> = e<sup>{{xcof}}x {{operator}} {{ycof}}y.</h1>
 
         </div>
 
         <div class="card-body">
-        <p>General Solutions of a differential equation, that are used in our daily life. A differential equation in exponential form can be written as 
-            <span class="frac"><span>dy</span><span class="symbol">/</span><span class="bottom">dx</span></span> = e<sup>(ax+by)</sup>
-            <a href="/differential-equation-of-exponential-calculator/">Differential Equation Calculator</a> is an online tool that is
-            used to find the general equation of a differential equation in a simple way.</p>
+            <p>In this question, we need to Solve the given differential equation by separation of variables. <span class="frac"><span>dy</span><span class="symbol">/</span><span class="bottom">dx</span></span> = e<sup>{{xcof}}x {{operator}} {{ycof}}y</sup>. This is the very common method to solve the <a href="/differential-equation-of-exponential-calculator/">differential equation by separating the variables of the equation</a>. It allows you to solve the equations of the form
+                => <span class="frac"><span>dy</span><span class="symbol">/</span><span class="bottom">dx</span></span> =  g(x)f(y)
+              </p>
 
             <form action="" method="POST" id="my_form">
                 {% csrf_token %}
 
                 <div>
-                    <b><span>Enter the differential Equation </span></b> 
                     <center>
                         <p> 
                             <b><span class="frac"><span>dy</span><span class="symbol">/</span><span class="bottom">dx</span></span>  =  e</b>
-                            <sup><input name="xcof" type="number"  id="xcof" {% if xcof %} value="{{ xcof|safe }}" {% else %} value = "5" {% endif %} placeholder="Enter x coefficient" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
+                            <sup><input name="xcof" type="number"  id="xcof" min="1" {% if xcof %} value="{{ xcof|safe }}" {% else %} value = "5" {% endif %} placeholder="Enter x coefficient" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                                 maxlength="3" style="width: 58px;">
                                 <span style="padding: 0px 10px 0px 0px;"><b>X</b></span>
                                 <select  aria-label=".form-select example" name="operator">
                                 <option value="+"selected>+</option>
                                 <option value ="-">-</option>
                                 </select>
-                                <input name="ycof" type="number"  id="ycof" {% if ycof %} value="{{ ycof|safe }}" {% else %} value = "4" {% endif %} placeholder="Enter y coefficient" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
+                                <input name="ycof" type="number" min="1" id="ycof" {% if ycof %} value="{{ ycof|safe }}" {% else %} value = "4" {% endif %} placeholder="Enter y coefficient" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                                 maxlength="3" style="width: 58px;">
                                 <span style="padding: 0px 10px 0px 0px;"><b>Y</b></span>
                             </sup>
@@ -251,7 +249,7 @@ display: none;
                 </div>
             </form> <br>
 
-            <h3>Examples of the differential equations </h3> <br>
+            <p>Examples of the differential equations </p>
             <div class="container">
                 <div class="row">
 
@@ -297,13 +295,13 @@ display: none;
 
         <div class="card" id="magnetic-Change in temperature">
             <div class="card-header">
-                <h2 class="h2">General Solution of the differential equation  <span class="frac"><span>dy</span><span class="symbol">/</span><span class="bottom">dx</span></span> = e<sup>{{xcof}}x {{operator}} {{ycof}}y</sup>?</h2>
+                <h2 class="h2">Detailed solution for solving the differential equation <span class="frac"><span>dy</span><span class="symbol">/</span><span class="bottom">dx</span></span> = e<sup>{{xcof}}x {{operator}} {{ycof}}y</sup>
+                    </h2>
             </div>
 
 
             <div class="card-body">
-                <strong>Detailed solution for solving the differential equation <span class="frac"><span>dy</span><span class="symbol">/</span><span class="bottom">dx</span></span> = e<sup>{{xcof}}x {{operator}} {{ycof}}y</sup>
-                </strong>   
+              
                 <p>If the equation is already not in this form then needs to do some algebra to put the equation into the above form. Here, the equation we have is</p>
                 <p>=><span class="frac"><span>dy</span><span class="symbol">/</span><span class="bottom">dx</span></span> = e<sup>{{xcof}}x {{operator}} {{ycof}}y</sup> </p>
                 <p>=> (<span class="frac"><span>1</span><span class="symbol">/</span><span class="bottom">f(y)</span></span> .<span class="frac"><span>dy</span><span class="symbol">/</span><span class="bottom">dx</span></span>) = g(x)</p>
@@ -322,7 +320,19 @@ display: none;
                     </p>
                 <p>The Final solution of the differential equation by using separation of variables method for  <br><strong> <span class="frac"><span>dy</span><span class="symbol">/</span><span class="bottom">dx</span></span> = e<sup>{{xcof}}x {{operator}} {{ycof}}y</sup>  =>  (<span {% if operator == "-"%} hidden {% endif %}>-</span>e<sup>{{valy}}x</sup>/{{ycof}}) = (e<sup>{{xcof}}x</sup>/{{xcof}}) + c.</strong></p>
 
-                
+                <hr>
+
+                <!-- ######## This is a comment  ######## -->
+<h3>FAQs on </span>Solve the given differential equation by separation of variables. <span class="frac"><span>dy</span><span class="symbol">/</span><span class="bottom">dx</span></span> = e<sup>{{xcof}}x {{operator}} {{ycof}}y</sup></h3>
+
+<p><strong>1. What is a separable differential equation how do you solve it?</strong></p>
+<p>Separable differential equations can be written in the form <span class="frac"><span>dy</span><span class="symbol">/</span><span class="bottom">dx</span></span> = f(x) g(y), where x and y are the variables that need to be integrated and separated. After separating the x and y, the resolution of the differential equation can be found easily by integrating both sides of the equation.</p>
+<p><strong>2.3. What is the formula for separation?</strong></p>
+<p><span class="frac"><span>dy</span><span class="symbol">/</span><span class="bottom">dx</span></span> = f(x)g(y), then the solution may be found by the technique of SEPARATION OF VARIABLES: &int; dy g(y) = &int; f(x) dx . This result is obtained by dividing the standard form by g(y), and then integrating both sides with respect to x.</p>
+<p><strong> Which differential equations are separable?</strong></p>
+<p>A separable differential equation is any equation that can be written in the form y&prime;=f(x)g(y). The method of separation of variables is used to find the general solution to a separable differential equation.</p>
+<p><strong>4. How do you know if a differential equation is linear or separable?</strong></p>
+<p>Linear: No products or powers of things containing y. For instance, y&prime;2 is right out. Separable: The equation can be put in the form dy(expression containing ys, but no xs, in some combination you can integrate)=dx(expression containing xs, but no ys, in some combination you can integrate).</p>
                 </div>
             </div>
 
