--- a/templates/Deepak/dimension_rectangl_calculator.html
+++ b/templates/Deepak/dimension_rectangl_calculator.html
@@ -22,7 +22,7 @@
 <!-- CSS ENDS -->
 
 <!-- META DATA STARTS -->
-<title> Square Root of a Fraction Calculator | How to Find a √fraction? - RoundingCalculator.Guru</title>
+<title> Largest dimension of a Rectangle Calculator - RoundingCalculator.Guru</title>
 <meta name=description
     content=" Calculate the Square Root of a fraction easily using our Square Root of a Fraction Calculator. Avail the process formula to compute √fraction..">
 
@@ -32,7 +32,7 @@
 <!-- FACEBOOK -->
 <meta content="https://www.facebook.com/OnlineCalculator-Guru-131572098650589/" property="og:url" />
 <meta property="og:title"
-    content=" Square Root of a Fraction Calculator | How to Find a √fraction? - RoundingCalculator.Guru" />
+    content=" Largest dimension of a Rectangle Calculator - RoundingCalculator.Guru" />
 <meta property="og:description"
     content=" Calculate the Square Root of a fraction easily using our Square Root of a Fraction Calculator. Avail the process formula to compute √fraction.. " />
 <meta content="" property="og:site_name" />
@@ -44,7 +44,7 @@
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="https://twitter.com/onlinecalculator" />
 <meta name="twitter:title"
-    content=" Square Root of a Fraction Calculator | How to Find a √fraction? - RoundingCalculator.Guru" />
+    content=" Largest dimension of a Rectangle Calculator - RoundingCalculator.Guru" />
 <meta name="twitter:description"
     content=" Calculate the Square Root of a fraction easily using our Square Root of a Fraction Calculator. Avail the process formula to compute √fraction.. " />
 <meta name="twitter:image:src" content="/static/images/logo/rounding-calculator.png" />
@@ -52,7 +52,7 @@
 <meta property="twitter:image:width" content="354" />
 <!-- Linkedin -->
 <meta property='og:title'
-    content=" Square Root of a Fraction Calculator | How to Find a √fraction? - RoundingCalculator.Guru" />
+    content=" Largest dimension of a Rectangle Calculator - RoundingCalculator.Guru" />
 <meta property='og:image' content="/static/images/logo/rounding-calculator.png" />
 <meta property='og:description'
     content=" Calculate the Square Root of a fraction easily using our Square Root of a Fraction Calculator. Avail the process formula to compute √fraction.." />
