--- a/templates/Deepak/dimension_rectangle_calculator-details.html
+++ b/templates/Deepak/dimension_rectangle_calculator-details.html
@@ -25,7 +25,7 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 <!-- Meta Title, Description and Canonical URL Starts -->
-<title>What is the Square Root of {{aa}} Squared? </title>
+<title>Largest Dimension of a Rectangle with {{aa}}m Perimeter - RoundingCalculator.Guru</title>
 <meta name="description"
     content="  Learn how to determine the square root of {{aa}} squared by reading our detailed steps and example. Check how √({{aa}}^2) is {{aa}}. " />
 <link rel="canonical" href="{{request.build_absolute_uri}}">
@@ -35,7 +35,7 @@
 <!--  FACEBOOK CONFIGURATION STARTS  -->
 <meta content="https://www.facebook.com/OnlineCalculator-Guru-131572098650589/" property="og:url" />
 <meta property="og:title"
-    content="Square Root of a Number Squared  Calculator | Free Calculator to find Square Root of a Number Squared " />
+    content="Largest Dimension of a Rectangle with {{aa}}m Perimeter - RoundingCalculator.Guru" />
 <meta property="og:description"
     content="  Learn how to determine the square root of {{aa}} squared by reading our detailed steps and example. Check how √({{aa}}^2) is {{aa}}." />
 <meta content="" property="og:site_name" />
@@ -48,7 +48,7 @@
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="https://twitter.com/onlinecalculator" />
 <meta name="twitter:title"
-    content="Square Root of a Number Squared  Calculator | Free Calculator to find Square Root of a Number Squared " />
+    content="Largest Dimension of a Rectangle with {{aa}}m Perimeter - RoundingCalculator.Guru" />
 <meta name="twitter:description"
     content="  Learn how to determine the square root of {{aa}} squared by reading our detailed steps and example. Check how √({{aa}}^2) is {{aa}}.  " />
 <meta name="twitter:image:src"
@@ -58,7 +58,7 @@
 <!-- TWITTER CARD CONFIGURATION ENDS  -->
 <!--  LINKEDIN CONFIGURATION STARTS-->
 <tittle></tittle>
-<meta property='og:title' content="Square Root of a Number Squared  Calculator | Square Root of a Number Squared " />
+<meta property='og:title' content="Largest Dimension of a Rectangle with {{aa}}m Perimeter - RoundingCalculator.Guru" />
 <meta property='og:image' content="https://onlinecalculator.guru/static/images/Chemistry/ohms-law-calculator.jpeg" />
 <meta property='og:description'
     content="  Learn how to determine the square root of {{aa}} squared by reading our detailed steps and example. Check how √({{aa}}^2) is {{aa}}.  ." />
@@ -255,7 +255,7 @@
                 </div>
             </form> <br>
 
-            <h3>Examples of Largest Dimension of a Rectangle  </h3> <br>
+            <p>Examples of Largest Dimension of a Rectangle  </p>
             <div class="container">
                 <div class="row">
 
