--- a/templates/Deepak/find-the-point-on-the-cone-calculator-details.html
+++ b/templates/Deepak/find-the-point-on-the-cone-calculator-details.html
@@ -24,9 +24,9 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 <!-- Meta Title, Description and Canonical URL Starts -->
-<title>Find the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point ({{xval}},{{yval}},{{zval}}) | lcmgcf.com</title>
+<title>Find the points on the cone z2 = x2 + y2 that are closest to the point ({{xval}},{{yval}},{{zval}}) | Roundngcalculator.Guru</title>
 <meta name="description"
-    content=" Find the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point ({{xval}},{{yval}},{{zval}}) & avail the results as (1, 1, -√2) and (1, 1, √2) in no time with our easy calculator tool. " />
+    content=" Find the points on the cone z2 = x2 + y2 that are closest to the point ({{xval}},{{yval}},{{zval}}) & avail the results as (1, 1, -√2) and (1, 1, √2) in no time with our easy calculator tool. " />
 <link rel="canonical" href="{{request.build_absolute_uri}}">
 
 <!-- Meta Title, Description and Canonical URL ENDS -->
@@ -35,9 +35,9 @@
 <!--  FACEBOOK CONFIGURATION STARTS  -->
 <meta content="https://www.facebook.com/OnlineCalculator-Guru-131572098650589/" property="og:url" />
 <meta property="og:title"
-    content="Find the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point ({{xval}},{{yval}},{{zval}}) | lcmgcf.com" />
+    content="Find the points on the cone z2 = x2 + y2 that are closest to the point ({{xval}},{{yval}},{{zval}}) | Roundngcalculator.Guru" />
 <meta property="og:description"
-    content=" Find the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point ({{xval}},{{yval}},{{zval}}) & avail the results as (1, 1, -√2) and (1, 1, √2) in no time with our easy calculator tool." />
+    content=" Find the points on the cone z2 = x2 + y2 that are closest to the point ({{xval}},{{yval}},{{zval}}) & avail the results as (1, 1, -√2) and (1, 1, √2) in no time with our easy calculator tool." />
 <meta content="" property="og:site_name" />
 <meta content="https://onlinecalculator.guru/static/images/Chemistry/ohms-law-calculator.jpeg" property="og:image" />
 <meta property="og:image:type" content="image/png" />
@@ -48,20 +48,19 @@
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="https://twitter.com/onlinecalculator" />
 <meta name="twitter:title"
-    content="Find the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point ({{xval}},{{yval}},{{zval}}) | lcmgcf.com" />
+    content="Find the points on the cone z2 = x2 + y2 that are closest to the point ({{xval}},{{yval}},{{zval}}) | Roundngcalculator.Guru" />
 <meta name="twitter:description"
-    content=" Find the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point ({{xval}},{{yval}},{{zval}}) & avail the results as (1, 1, -√2) and (1, 1, √2) in no time with our easy calculator tool." />
+    content=" Find the points on the cone z2 = x2 + y2 that are closest to the point ({{xval}},{{yval}},{{zval}}) & avail the results as (1, 1, -√2) and (1, 1, √2) in no time with our easy calculator tool." />
 <meta name="twitter:image:src"
     content="https://onlinecalculator.guru/static/images/Chemistry/ohms-law-calculator.jpeg" />
 <meta property="twitter:image:height" content="435" />
 <meta property="twitter:image:width" content="354" />
 <!-- TWITTER CARD CONFIGURATION ENDS  -->
 <!--  LINKEDIN CONFIGURATION STARTS-->
-<tittle></tittle>
-<meta property='og:title' content="Find the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point ({{xval}},{{yval}},{{zval}}) | lcmgcf.com " />
+<meta property='og:title' content="Find the points on the cone z2 = x2 + y2 that are closest to the point ({{xval}},{{yval}},{{zval}}) | Roundngcalculator.Guru " />
 <meta property='og:image' content="https://onlinecalculator.guru/static/images/Chemistry/ohms-law-calculator.jpeg" />
 <meta property='og:description'
-    content=" Find the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point ({{xval}},{{yval}},{{zval}}) & avail the results as (1, 1, -√2) and (1, 1, √2) in no time with our easy calculator tool." />
+    content=" Find the points on the cone z2 = x2 + y2 that are closest to the point ({{xval}},{{yval}},{{zval}}) & avail the results as (1, 1, -√2) and (1, 1, √2) in no time with our easy calculator tool." />
 <meta property='og:url' content="https://www.linkedin.com/in/onlinecalculator/" />
 <!-- end of linkedin CONFIGURATIONS ENDS -->
 <!-- OPEN GRAPH CONFIGURATION ENDS -->
@@ -192,7 +191,7 @@
 display: inline-block;
 position: relative;
 vertical-align: middle;
-letter-spacing: 0.001em;
+letter-spacing: 0.001em; 
 text-align: center;
 }
 .frac > span {
@@ -254,8 +253,8 @@ display: none;
                     </div>
                 </form> <br>
                 </div>
-            
-            <h3>Examples of Find the points on the cone that are closest to the origin</h3> <br>
+             
+            <p>Examples of Find the points on the cone that are closest to the origin</p> 
             <div class="container">
                 <div class="row">
 
@@ -264,7 +263,7 @@ display: none;
                             {% for a in randList1 %}
                             <li>
                                 <a href="/find-the-points-on-the-cone-z2-x2-y2-that-are-closest-to-the-point-{{a.0}}-{{a.1}}-{{a.2}}/">
-                                    Find the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point ({{a.0}},{{a.1}},{{a.2}}).
+                                     point ({{a.0}},{{a.1}},{{a.2}}).
                                 </a>
                             </li>
 
@@ -278,7 +277,7 @@ display: none;
 
                             <li>
                                 <a href="/find-the-points-on-the-cone-z2-x2-y2-that-are-closest-to-the-point-{{a.0}}-{{a.1}}-{{a.2}}/">
-                                    Find the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point ({{a.0}},{{a.1}},{{a.2}}).
+                                     point ({{a.0}},{{a.1}},{{a.2}}).
                                 </a>
                             </li>
                             {%endfor%}
@@ -305,9 +304,8 @@ display: none;
 
 
             <div class="card-body">
-                <p><strong>find the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point ({{xval}},{{yval}},{{zval}})?</strong></p>
                 <p><strong>Solution:</strong></p>
-                <p><strong>Given that, </strong></p>
+                <p>Given that, </p>
                 <p><span style="font-weight: 400;">z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup></p>
                 <p><span style="font-weight: 400;">To begin, we must assign the variables. We can assume that the point on the cone that we have to find is B(x, y, z). Now, we must find the distance between this point B and ({{xval}},{{yval}},{{zval}}). </span></p>
 
@@ -321,7 +319,8 @@ display: none;
                 <p>The next step is to minimize d, so it will be just like minimizing f(x, y) = d<sup>2</sup>. </p>
                 <p>f' = 0 </p>
                 <p>Now differentiate the function with respect to x.</p>
-                <p>df/dx = 2(x - {{xval}}) + 2x = 0</p>
+                <p><span class="frac"><span>df</span><span class="symbol">/</span><span
+                    class="bottom">dx</span></span> = 2(x - {{xval}}) + 2x = 0</p>
                 <p>Then, solve for x </p>
                 <p>2x - {{txval}} + 2x = 0</p>
                 <p>4x = {{txval}}</p>
@@ -329,7 +328,8 @@ display: none;
                 <p>x = {{x}}</p>
 
                 <p>Now differentiate the function with respect to y.</p>
-                <p>df/dx = 2(y - {{yval}}) + 2y = 0</p>
+                <p><span class="frac"><span>df</span><span class="symbol">/</span><span
+                    class="bottom">dx</span></span> = 2(y - {{yval}}) + 2y = 0</p>
                 <p>Then, solve for y </p>
                 <p>2y - {{tyval}} + 2y = 0</p>
                 <p>4y = {{tyval}}</p>
@@ -343,7 +343,7 @@ display: none;
                 <p>z = ±√({{x}}<sup>2</sup> + {{y}}<sup>2</sup>)</p>
                 <p>z = {{z}} </p>
                 <p>Therefore, the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point ({{xval}},{{yval}},{{zval}}) are <strong>({{x}}, {{y}}, -√{{zv}}) and ({{x}}, {{y}}, √{{zv}}).</strong> </p>
-                
+                <hr>
                 <h3><strong>FAQs on How to Calculate the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point ({{xval}},{{yval}},{{zval}})?</strong></h3>
             
             <p><strong>Q1. </strong><strong>What are the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point ({{xval}},{{yval}},{{zval}})?</strong></p>
