--- a/templates/Deepak/find-the-point-on-the-cone-calculator.html
+++ b/templates/Deepak/find-the-point-on-the-cone-calculator.html
@@ -22,17 +22,16 @@
 <!-- CSS ENDS -->
 
 <!-- META DATA STARTS -->
-<title>Find the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point (2, 2, 0) | lcmgcf.com
-</title>
-<meta name=description content="Find the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point (2, 2, 0) & avail the results as (1, 1, -√2) and (1, 1, √2) in no time with our easy calculator tool. ">
+<title>Find the points on the cone z2 = x2 + y2 that are closest to the point - RoundingOff.Guru</title>
+<meta name=description content="Find the points on the cone z2 = x2 + y2 that are closest to the point (2, 2, 0) & avail the results as (1, 1, -√2) and (1, 1, √2) in no time with our easy calculator tool. ">
 
 <link rel="canonical" href="{{request.build_absolute_uri}}">
 <!-- META DATA ENDS -->
 
 <!-- FACEBOOK -->
 <meta content="https://www.facebook.com/OnlineCalculator-Guru-131572098650589/" property="og:url" />
-<meta property="og:title" content="Find the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point (2, 2, 0) | lcmgcf.com" />
-<meta property="og:description" content="Find the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point (2, 2, 0) & avail the results as (1, 1, -√2) and (1, 1, √2) in no time with our easy calculator tool. " />
+<meta property="og:title" content="Find the points on the cone z2 = x2 + y2 that are closest to the point - RoundingOff.Guru" />
+<meta property="og:description" content="Find the points on the cone z2 = x2 + y2 that are closest to the point (2, 2, 0) & avail the results as (1, 1, -√2) and (1, 1, √2) in no time with our easy calculator tool. " />
 <meta content="" property="og:site_name" />
 <meta content="/static/images/logo/rounding-calculator.png" property="og:image" />
 <meta property="og:image:type" content="image/png" />
@@ -41,15 +40,15 @@
 <!-- Twitter -->
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="https://twitter.com/onlinecalculator" />
-<meta name="twitter:title" content="Find the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point (2, 2, 0) | lcmgcf.com" />
-<meta name="twitter:description" content="Find the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point (2, 2, 0) & avail the results as (1, 1, -√2) and (1, 1, √2) in no time with our easy calculator tool. " />
+<meta name="twitter:title" content="Find the points on the cone z2 = x2 + y2 that are closest to the point - RoundingOff.Guru" />
+<meta name="twitter:description" content="Find the points on the cone z2 = x2 + y2 that are closest to the point (2, 2, 0) & avail the results as (1, 1, -√2) and (1, 1, √2) in no time with our easy calculator tool. " />
 <meta name="twitter:image:src" content="/static/images/logo/rounding-calculator.png" />
 <meta property="twitter:image:height" content="435" />
 <meta property="twitter:image:width" content="354" />
 <!-- Linkedin -->
-<meta property='og:title' content="Find the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point (2, 2, 0) | lcmgcf.com" />
+<meta property='og:title' content="Find the points on the cone z2 = x2 + y2 that are closest to the point - RoundingOff.Guru" />
 <meta property='og:image' content="/static/images/logo/rounding-calculator.png" />
-<meta property='og:description' content="Find the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point (2, 2, 0) & avail the results as (1, 1, -√2) and (1, 1, √2) in no time with our easy calculator tool. " />
+<meta property='og:description' content="Find the points on the cone z2 = x2 + y2 that are closest to the point (2, 2, 0) & avail the results as (1, 1, -√2) and (1, 1, √2) in no time with our easy calculator tool. " />
 <meta property='og:url' content="https://www.linkedin.com/in/onlinecalculator/" />
 
 {% endblock %}
@@ -74,7 +73,7 @@
 <div class="container">
     <div class="card c1">
         <div class="card-header">
-            <h1 class="h1">Find the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point (2,2,0)</h1>
+            <h1 class="h1">Find the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point</h1>
         </div>
         <div class="card-body">
             <p><span style="font-weight: 400;">Get to know how to find the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point (2, 2, 0), by reading this article. 
@@ -118,18 +117,6 @@
             
             </div>
             
-            <h3><strong>FAQs on How to Calculate the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point (2, 2, 0)?</strong></h3>
-            
-            <p><strong>Q1. </strong><strong>What are the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point (2, 2, 0)?</strong></p>
-            <p><strong>Ans:</strong><span style="font-weight: 400;">The coordinates for the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> are (1, 1, -√2) and (1, 1, √2). </span>
-            
-            <p><strong>Q2. </strong><strong>How to find the points on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> that are closest to the point (2, 2, 0)?</strong></p>
-            <p><strong>Ans: </strong><span style="font-weight: 400;">First, find the distance between the point and (2, 2, 0). Then, differentiate that equation with respect to x, to find the value of x. Then, differentiate it with respect to y, to find the value of y. Then, use the equation of the cone to find z. Now, put them together to get the coordinates of the points.</span></p>
-            <p><strong>Q3. </strong><strong>What is the equation used to find distance between the point on the cone z<sup>2</sup> = x<sup>2</sup> + y<sup>2</sup> and (2, 2, 0)?</strong></p>
-            <p><strong>Ans:</strong><span>The distance is determined by the equation: d = √[(x - 2)<sup>2</sup> + (y - 2)<sup>2</sup> + x<sup>2</sup> + y<sup>2</sup>]. </span>
-            </p>
-            <p><strong>Q4. Is x<sup>2</sup> an increasing function?</strong></p>
-            <p><strong>Ans: </strong><span style="font-weight: 400;">Yes, x<sup>2</sup> is always an increasing function because the answer is always a positive number when you square any number.</span></p>
         </div>
     </div>
 </div>
