--- a/templates/Deepak/find-the-point-on-the-surface-calculator.html
+++ b/templates/Deepak/find-the-point-on-the-surface-calculator.html
@@ -22,7 +22,7 @@
 <!-- CSS ENDS -->
 
 <!-- META DATA STARTS -->
-<title>Find the points on the surface y<sup>2</sup> = 16 + xz that are closest to the origin | lcmgcf.com
+<title>Find the points on the surface y = c + xz that are closest to the origin | lcmgcf.com
 </title>
 <meta name=description content="X times X is the result of multiplying the value X by itself X times.">
 
@@ -31,7 +31,7 @@
 
 <!-- FACEBOOK -->
 <meta content="https://www.facebook.com/OnlineCalculator-Guru-131572098650589/" property="og:url" />
-<meta property="og:title" content="Find the points on the surface y<sup>2</sup> = 16 + xz that are closest to the origin | lcmgcf.com" />
+<meta property="og:title" content="Find the points on the surface y = c + xz that are closest to the origin | lcmgcf.com" />
 <meta property="og:description" content="X times X is the result of multiplying the value X by itself X times. " />
 <meta content="" property="og:site_name" />
 <meta content="/static/images/logo/rounding-calculator.png" property="og:image" />
@@ -41,15 +41,15 @@
 <!-- Twitter -->
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="https://twitter.com/onlinecalculator" />
-<meta name="twitter:title" content="Find the points on the surface y<sup>2</sup> = 16 + xz that are closest to the origin | lcmgcf.com" />
-<meta name="twitter:description" content="Find the points on the surface y<sup>2</sup> = 16 + xz that are closest to the origin " />
+<meta name="twitter:title" content="Find the points on the surface y = c + xz that are closest to the origin | lcmgcf.com" />
+<meta name="twitter:description" content="Find the points on the surface y = c + xz that are closest to the origin " />
 <meta name="twitter:image:src" content="/static/images/logo/rounding-calculator.png" />
 <meta property="twitter:image:height" content="435" />
 <meta property="twitter:image:width" content="354" />
 <!-- Linkedin -->
-<meta property='og:title' content="Find the points on the surface y<sup>2</sup> = 16 + xz that are closest to the origin | lcmgcf.com" />
+<meta property='og:title' content="Find the points on the surface y = c + xz that are closest to the origin | lcmgcf.com" />
 <meta property='og:image' content="/static/images/logo/rounding-calculator.png" />
-<meta property='og:description' content="Click here to Find the points on the surface y<sup>2</sup> = 16 + xz that are closest to the origin i.e (0, ±{{res}}, 0). Use the Lagrange multiplier method to get partial derivatives. " />
+<meta property='og:description' content="Click here to Find the points on the surface y = c + xz that are closest to the origin i.e (0, ±{{res}}, 0). Use the Lagrange multiplier method to get partial derivatives. " />
 <meta property='og:url' content="https://www.linkedin.com/in/onlinecalculator/" />
 
 {% endblock %}
@@ -74,46 +74,34 @@
 <div class="container">
     <div class="card c1">
         <div class="card-header">
-            <h1 class="h1">Find the points on the surface y<sup>2</sup> = 16 + xz that are closest to the origin</h1>
+            <h1 class="h1">Find the points on the surface y<sup>2</sup> = c + xz that are closest to the origin</h1>
         </div>
         <div class="card-body">
-            <p><span style="font-weight: 400;">Learn how to Find the points on the surface y<sup>2</sup> = 16 + xz that are closest to the origin with the help of our detailed solution below. 
+            <p><span style="font-weight: 400;">Learn how to Find the points on the surface y<sup>2</sup> = c + xz that are closest to the origin with the help of our detailed solution below. 
                 You will understand how to use the Lagrange multipliers to find the closest points easily</span>
             </p>
             <div class="card-body">
                 <form action="" method="POST" id="my_form">
                     {% csrf_token %}
                     <div>
-                        <span style="padding: 0px 10px;"><strong>y<sup>2</sup> =</strong></span>
+                        <p align="center"><span style="padding: 0px 10px;"><strong>y<sup>2</sup> =</strong></span>
                         <input name="value" type="number" class="form" id="value" onkeypress="return isNumberKey(event)"
                             required required step="1" min="1" {% if value %} value="{{value}}" {% else %} value="16" {% endif %} placeholder="" 
                             oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
-                            maxlength="4">
-                            <input size="2" style="text-align: center;" disabled readonly value="+ xz">
+                            maxlength="4" style="width: 90px;">
+                            <input size="2" style="text-align: center;" disabled readonly value="+ xz"></p>
                     </div>
 
 
+
                     <div class=" center col mt-2 ">
-                        <button type="submit" class="btn btn-primary" name="f1">Calculate</button>
+                      <center>  <button type="submit" class="btn btn-primary" name="f1">Calculate</button></center>
                         
                     </div>
                 </form> <br>
             
             </div>
             
-            <h3><strong>FAQs on Find the points on the surface y<sup>2</sup> = 16 + xz that are closest to the origin</strong></h3>
-            
-            <p><strong>Q1. </strong><strong>What are the points on the surface y<sup>2</sup> = 16 + xz that are closest to the origin?</strong></p>
-            <p><strong>Ans:</strong><span style="font-weight: 400;"> The coordinates of the points are (0, ±4, 0).</span>
-            
-            <p><strong>Q2. </strong><strong>What is the distance between the origin of a surface and an arbitrary point on it?</strong></p>
-            <p><strong>Ans: </strong><span style="font-weight: 400;">The distance is determined by the equation: d(x, y, z) = √(x^2 + y^2 + z^2).</span></p>
-            <p><strong>Q3. </strong><strong>How to find the points on the surface y<sup>2</sup> = 16 + xz that are closest to the origin?</strong></p>
-            <p><strong>Ans:</strong>First, get the equation for finding the distance between a point and the origin of a surface. Then, minimize it to the surface's equation. After this, use the Lagrange multipliers to find the partial derivatives with respect to each variable. Next, equate each partial derivate to 0. Calculate the critical points, and find the values of all the variables, then use them to find y from the surface's equation. 
-                Once you do, you will get the points. 
-            </p>
-            <p><strong>Q4. What is a Lagrange multiplier?</strong></p>
-            <p><strong>Ans: </strong><span style="font-weight: 400;">The Lagrange multiplier method will help you calculate the minima or maxima of a function that has many variables. For example, λ is a Lagrange multiplier.</span></p>
         </div>
     </div>
 </div>
